chore: some little cleanining on integration-test
- unsued import
- miss positionned comments

APIM-9724

(cherry picked from commit 9885932b30bc3ce4bde47d88cd874df7c4e26093)